--- a/FrontEndtesting/Main front end/style.css
+++ b/FrontEndtesting/Main front end/style.css
@@ -787,8 +787,9 @@ button:hover{
     gap: 1vw;
     height: 100%;
 }
-.strands_btn_wrapper{
-    
+.style_sub_row_content:has(.select_btn){
+    justify-content: space-around;
+    gap: 0px;
 }
 .strand_btn{
     border-radius: 50%;
@@ -804,7 +805,7 @@ button:hover{
     justify-content: center;
     padding: 0px;
     position: relative;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.3s, border-width 0s, font-size 0s ease-in-out;
     background-color: white;
     user-select: none;
 }
@@ -830,6 +831,7 @@ button:hover{
     border-radius: 20px;
     height: 100%;
     box-sizing: border-box;
+    cursor: pointer;
 }
 .color_list_square{
     width: 1vw;
@@ -839,7 +841,7 @@ button:hover{
 
 .select_btn{
     border-radius: 20px;
-    font-size: 1.2vw;
+    font-size: 1.1vw;
     padding: 0px 0.5vw 0px 0.5vw;
     text-overflow: unset;
 }
@@ -848,6 +850,21 @@ button:hover{
     padding: 0px 0.5vw 0px 0.5vw;
     border-radius: 20px;
 }
-#B1 .row{
-    
+.new_hide{
+    transform: scale(0);
+    font-size: 0px;
+    margin: 0px;
+    padding: 0px;
+    border-width: 0px;
+    gap: 0px;
 }
+
+.new_hide * .style_sub_row_content *, .new_hide * .style_sub_row_content{
+    font-size: 0px;
+    border-width: 0px;
+    width: 0px;
+    padding: 0px;
+    height: 0px;
+    gap: 0px;;
+}
+
