--- a/FrontEndtesting/Main front end/style.css
+++ b/FrontEndtesting/Main front end/style.css
@@ -766,7 +766,7 @@ button:hover{
     width: 90%;
     display: flex;
     flex-direction: column;
-    gap: 1vh;
+    /* gap: 1vh; */
     overflow: hidden;
     transition: all 0.4s ease-in-out;
 }
@@ -775,6 +775,7 @@ button:hover{
     display: flex;
     gap: 0.6vw;
     align-items: center;
+    margin-top: 1.1vh;
 }
 .style_sub_row_header{
 
@@ -794,8 +795,8 @@ button:hover{
 .strand_btn{
     border-radius: 50%;
     aspect-ratio: 1;
-    font-size: 1.1vw;
-    width: 1.5vw;
+    font-size: 1.3vw;
+    width: 1.7vw;
 }
 .style_button{
     border: 2px solid red;
@@ -809,7 +810,12 @@ button:hover{
     background-color: white;
     user-select: none;
 }
-.style_button:hover{
+.style_button:hover, .style_drop:hover{
+    background-color: rgb(252, 145, 145);
+}
+.active.style_button{
+    color: white;
+    box-shadow: 0px 0px 15px 0px red;
     background-color: rgb(252, 145, 145);
 }
 .style_drop{
@@ -824,7 +830,7 @@ button:hover{
     display: flex;
     border: 2px solid black;
     background-color: white;
-    width: 100%;
+    width: 96%;
     align-items: center;
     justify-content: center;
     gap: 0.5vw;
@@ -832,6 +838,11 @@ button:hover{
     height: 100%;
     box-sizing: border-box;
     cursor: pointer;
+    transition: border-color 0.3s, box-shadow 0.3s ease;
+}
+.color_selected_box:hover{
+    border-color: red;
+    box-shadow: 0px 0px 15px 0px red;
 }
 .color_list_square{
     width: 1vw;
@@ -858,8 +869,11 @@ button:hover{
     border-width: 0px;
     gap: 0px;
 }
+.new_hide .style_sub_row{
+    margin: 0px;
+}
 
-.new_hide * .style_sub_row_content *, .new_hide * .style_sub_row_content{
+.new_hide * .style_sub_row_content *, .new_hide * .style_sub_row_content, .new_hide * .color_selected_box, .new_hide * .color_selected_box .color_list_square{
     font-size: 0px;
     border-width: 0px;
     width: 0px;
